# afterburn

./: .afterburn.yaml.example  .gitignore  404.html  PYPI_README.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/diagnoser/: index.html
api/types/: index.html
contributing/: index.html
demo/: README.md  demo.tape  demo_api.py  demo_fast.tape  run_demo.sh
docs/: contributing.md  index.md
docs/api/: diagnoser.md  types.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: behaviour.md  deployment.md  reports.md  reward-hacking.md  weight-diff.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/behaviour/: index.html
guide/deployment/: index.html
guide/reports/: index.html
guide/reward-hacking/: index.html
guide/weight-diff/: index.html
search/: search_index.json
src/afterburn/: __init__.py  __main__.py  ci.py  config.py  device.py  diagnoser.py  exceptions.py  nli.py  types.py
src/afterburn/behaviour/: __init__.py  analyser.py  calibration.py  cot_analysis.py  diversity.py  format_analysis.py  length_analysis.py  reasoning.py  result.py  token_divergence.py
src/afterburn/cli/: __init__.py  behaviour_cmd.py  diagnose.py  hack_check_cmd.py  main.py  utils.py  weight_diff_cmd.py
src/afterburn/loading/: __init__.py  checkpoint.py  layer_iterator.py  lora_loader.py  model_loader.py
src/afterburn/prompts/: __init__.py  runner.py  schema.py  suite.py
src/afterburn/prompts/builtin/: code.yaml  math.yaml  reasoning.yaml  safety.yaml
src/afterburn/report/: __init__.py  generator.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py  recommendations.py  summary.py  visualizations.py
src/afterburn/report/templates/: report.html.j2  styles.css
src/afterburn/reward_hack/: __init__.py  detector.py  format_gaming.py  length_bias.py  probe_generator.py  result.py  risk_score.py  strategy_collapse.py  sycophancy.py
src/afterburn/weight_diff/: __init__.py  activation_diff.py  attention.py  embedding.py  engine.py  layernorm.py  lora_analysis.py  metrics.py  result.py  spectral.py
tests/: conftest.py  test_ci.py  test_config.py  test_config_validation.py  test_diagnoser.py  test_integration.py  test_nli.py  test_path_validation.py  test_resource_management.py  test_types.py
tests/test_behaviour/: test_calibration.py  test_cot_analysis.py  test_diversity.py  test_format_analysis.py  test_format_analysis_phase2.py  test_length_analysis.py  test_length_analysis_phase2.py  test_reasoning.py  test_reasoning_phase2.py  test_token_divergence.py
tests/test_cli/: test_behaviour_cmd.py  test_cli_e2e.py  test_diagnose.py  test_diagnose_cmd.py  test_hack_check_cmd.py  test_logging.py  test_main.py  test_weight_diff_cmd.py
tests/test_loading/: test_checkpoint.py  test_layer_iterator.py  test_lora_loader.py  test_model_loader.py
tests/test_prompts/: test_suite.py
tests/test_report/: test_generator.py  test_html_report.py  test_json_report.py  test_markdown_report.py  test_summary.py  test_visualizations_phase2.py
tests/test_reward_hack/: test_consistency_probes.py  test_detector.py  test_format_gaming.py  test_length_bias.py  test_probe_generator.py  test_risk_score.py  test_sycophancy.py
tests/test_weight_diff/: test_activation_diff.py  test_behavioral_vectors.py  test_behavioral_vectors_integration.py  test_engine.py  test_metrics.py  test_mp_fit.py  test_spectral.py  test_svd.py
